[package]
name = "slight"
version = "0.1.0"
edition = "2021"

[lib]
name = "slight"
path = "src/lib.rs"

[[bin]]
name = "slight"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", default-features = false, features = ["std", "help", "derive", "cargo"] }
strum = { version = "0.24", default-features = false, features = [ "derive" ] }
thiserror = { version = "1.0.40", default-features = false }
