[package]
name = "slight"
version = "0.1.0"
edition = "2021"

[lib]
name = "slight"
path = "src/lib.rs"

[[bin]]
name = "slight"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", default-features = false, features = ["std", "help", "derive", "cargo"] }
thiserror = { version = "1.0.40", default-features = false }
udev = { version = "0.7.0", default-features = false }
nix = { version = "0.26.2", default-features = false, features = ["fs", "user"] }
dbus = { version = "0.9.7", default-features = false }
